# QFRsuPipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
:memory:/: data.json
apps/rsu_dashboard/: README.md  pipeline.py
docs/: MAPPING.md
src/qfpytoolbox/: QFPyToolbox.code-workspace  __init__.py  dataset.py  finance.py  optim.py  parameters.py  rsu.py  rsu_builder.py  rsu_encoding.py  rsu_loaders.py  stats.py  timeseries.py
src/qfpytoolbox/_internal/: _utils.py
src/qfpytoolbox/io/: __init__.py  dataframes.py  logger.py  media.py
src/qfpytoolbox/utils/: __init__.py  dataframe_compare.py  dates.py
tests/: test_finance.py  test_optim.py  test_public_api_boundary.py  test_stats.py  test_timeseries.py
tests/analytics/: test_analytics.py
tests/dataset/: test_dataset.py
tests/io/: test_dataframes.py  test_logger.py  test_media.py
tests/parameters/: test_parameters.py
tests/rsu/: test_rsu.py  test_rsu_loaders_builder.py
tests/utils/: test_dataframe_compare.py  test_dates.py
