[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qfpytoolbox"
version = "0.1.0"
description = "A Pythonic quantitative finance toolbox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
authors = [{ name = "QFPyToolbox Contributors" }]
keywords = ["quantitative finance", "portfolio optimization", "risk management", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
pandas = ["pandas>=1.5"]
scipy = ["scipy>=1.10"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.5", "pytest-cov>=4.0"]
all = ["matplotlib>=3.6", "pandas>=1.5", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/QFPyToolbox/QFPyToolbox"
Repository = "https://github.com/QFPyToolbox/QFPyToolbox"
Documentation = "https://github.com/QFPyToolbox/QFPyToolbox/tree/main/docs"
"Bug Tracker" = "https://github.com/QFPyToolbox/QFPyToolbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qfpytoolbox"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
