[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qfpytoolbox"
version = "0.1.0"
description = "Python equivalent of MyJuliaToolbox.jl — data I/O, media abstractions, async logging, date utilities, and dataset management"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
authors = [{ name = "Mahdi Akkouh" }]
keywords = ["dataframe", "io", "media", "arrow", "csv", "sqlite", "logging", "dataset", "parameters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.5",
    "pyarrow>=11.0",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
minio = ["boto3>=1.26"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.5", "pytest-cov>=4.0"]
all = ["boto3>=1.26"]

[project.urls]
Homepage = "https://github.com/lemahdi/QFPyToolbox"
Repository = "https://github.com/lemahdi/QFPyToolbox"
"Julia Source" = "https://github.com/lemahdi/MyJuliaToolbox.jl"
"Bug Tracker" = "https://github.com/lemahdi/QFPyToolbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qfpytoolbox"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
